recursion.lessons.recursion.polygonfractal.PolygonFractal.scala.error
PolygonFractal:15: error: expected start of definition
	override def run() {
                 ^PolygonFractal:19: error: Unmatched closing brace '}' ignored here
}
^